vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv
type Tuple = []f64

fn new_tuple(x f64, y f64, z f64, w f64) Tuple {
	return Tuple([x, y, z, w])
}

fn (a Tuple) + (b Tuple) Tuple {
	mut res := []f64{len: a.len}
	for i := 0; i < a.len; i++ {
		res[i] = a[i] + b[i]
	}
	return Tuple(res)
}
fn main() {
    mut a := new_tuple(12, 4.5, 6.7, 6)
    b := new_tuple(12, 4.5, 6.7, 6)
    a -= b
    println(a - b)
}
